--Added a temporary mobile-only beta notice for tablet & desktop users

--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
     <title>SnapCaps</title>
 </head>
 <header>
+    <!-- TEMPORARY NOTIFICATION BAR -->
+    <div class="notif-bar">
+        <p>This site is currently in mobile-only beta. Please visit on your mobile, or check back later for the full tablet and desktop version.</p>
+    </div>
+
     <nav>
         <div class="logo-container">
         <img src="logoipsum-327.svg" alt="logo" title="logo" class="navbar-logo">
@@ -29,7 +34,7 @@
 </header>
 
 <body>
-    
+
 
     <section id="home" class="section">
         <h1>SnapCaps</h1>
