Added lazy loading attribute to images for better performance

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
     <section id="home" class="section">
         <h1>SnapCaps</h1>
-        <img src="/images/joanna-kosinska-unsplash.jpg" class="home-photo" alt="homepage image" title="Photo by Joanna Kosinska on Unsplash.com">
+        <img src="/images/joanna-kosinska-unsplash.jpg" loading="lazy" class="home-photo" alt="homepage image" title="Photo by Joanna Kosinska on Unsplash.com">
             <div class="home-contents">
                 <p class="text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sapiente beatae perspiciatis magni.</p>
                 <p class="text">Lorem ipsum dolor sit amet consectetur.</p>
@@ -52,37 +52,37 @@
         <h1>Gallery</h1>
             <div id="images" class="gallery-contents">
                 <div class="image-wrapper">
-                    <img data-image-id="shubhamDhageImage" id="shubham" class="user-image" src="/images/shubham-dhage-unsplash.jpg" alt="">
+                    <img class="user-image" loading="lazy" src="/images/shubham-dhage-unsplash.jpg" alt="">
                     <p>Photo by 
                         <a href="https://unsplash.com/@theshubhamdhage" target="_blank">Shubham Dhage</a>
                     </p>
                 </div>
                 <div class="image-wrapper">
-                    <img class="user-image" src="/images/peter-thomas-unsplash.jpg" alt="">
+                    <img class="user-image" loading="lazy" src="/images/peter-thomas-unsplash.jpg" alt="">
                     <p>Photo by 
                         <a href="https://unsplash.com/@lifeof_peter_" target="_blank">Peter Thomas</a>
                     </p>
                 </div>
                 <div class="image-wrapper">
-                    <img class="user-image" src="/images/jaimy-de-hon-unsplash.jpg" alt="">
+                    <img class="user-image" loading="lazy" src="/images/jaimy-de-hon-unsplash.jpg" alt="">
                     <p>Photo by 
                         <a href="https://unsplash.com/@jaimydehon" target="_blank">Jaimy De Hon</a>
                     </p>
                 </div>
                 <div class="image-wrapper">
-                    <img class="user-image" src="/images/alexander-lunyov-unsplash.jpg" alt="">
+                    <img class="user-image" loading="lazy" src="/images/alexander-lunyov-unsplash.jpg" alt="">
                     <p>Photo by 
                         <a href="https://unsplash.com/@sunify" target="_blank">Alexander Lunynov</a>
                     </p>
                 </div>
                 <div class="image-wrapper">
-                    <img class="user-image" src="/images/will-xiang-unsplash.jpg" alt="">
+                    <img class="user-image" loading="lazy" src="/images/will-xiang-unsplash.jpg" alt="">
                     <p>Photo by 
                         <a href="https://unsplash.com/@cuvii" target="_blank">Will Xiang</a>
                     </p>
                 </div>
                 <div class="image-wrapper">
-                    <img class="user-image" src="/images/nadzeya-matskevich-unsplash.jpg" alt="">
+                    <img class="user-image" loading="lazy" src="/images/nadzeya-matskevich-unsplash.jpg" alt="">
                     <p>Photo by 
                         <a href="https://unsplash.com/@nadzeya1104" target="_blank">Nadzeya Matskevich</a>
                     </p>
@@ -101,6 +101,7 @@
             <div class="about-contents">
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nulla quaerat totam sit veritatis labore deserunt repudiandae quasi obcaecati debitis eius architecto recusandae ratione, voluptas provident quod. Sunt.</p>
                 <br>
+                <img src="images/praewthida-k-unsplash.jpg" loading="lazy" alt=""  title="Photo by Praewthida K"><br>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis ullam, quidem nihil ut labore aspernatur excepturi ipsum obcaecati.</p>
                 <br>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dignissimos, consequuntur! Odio ipsam magni molestias nesciunt. Nulla reiciendis placeat, delectus, eum ducimus totam, ipsum ipsa eaque dolorum maxime a ipsam deserunt necessitatibus dolorem aperiam id.</p>
