Added modal window for contact page

--- a/index.html
+++ b/index.html
@@ -113,12 +113,22 @@
     <section id="contact" class="section" style="display: none;">
         <h1>Contact</h1>
             <div class="contact-contents">
-                <h2>How can I help you?</h2>
-                <ol>
-                    <li>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vero accusamus officiis aliquid nisi.</li>
-                    <li>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</li>
-                    <li>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</li>
-                </ol>
+                <h2>How can we help you?</h2>
+                    <ol>
+                        <li>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vero accusamus officiis aliquid nisi.</li>
+                        <li>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</li>
+                        <li>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</li>
+                    </ol>
+                <button class="contact-help">Send us an email regarding your concern!</button>
+            </div>
+
+            <div class="contact-modal">
+                <div class="contact-modal-contents">
+                    <label class="contact-label" for="name">Please fill in the blanks below so we can reach out to your concerns!</label>
+                    <input type="text" placeholder="Enter your name here..." required><br>
+                    <input type="text" placeholder="Enter your email here..." required><br>
+                    <input type="submit" value="Submit" required>
+                </div>
             </div>
     </section>
     <script src="script.js"></script>
